--- a/site-TESTE/index.html
+++ b/site-TESTE/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Ola, mundo!</h1>
     <p>Este é o meu primeiro site com repositório no GitHub.</p>
+    <p>Este site foi criado como parte de um tutorial sobre Git e GitHub. </p>
     
 </body>
 </html>
