Add heart emoji to the main heading

--- a/site-TESTE/index.html
+++ b/site-TESTE/index.html
@@ -6,7 +6,7 @@
     <title>Meu site com repositorio</title>
 </head>
 <body>
-    <h1>Ola, mundo!</h1>
+    <h1>Ola, mundo!🤍</h1>
     <p>Este é o meu primeiro site com repositório no GitHub.</p>
     <p>Este site foi criado como parte de um tutorial sobre Git e GitHub. </p>
     
